# goit-pythonweb-hw-12

./: Docker-compose.yaml  README.md  main.py  pyproject.toml  test.db  test_output
alembic/: env.py
alembic/versions/: 1ec9b1a58004_add_user.py  b65ae4709b6a_initial_contacts_revision.py  b9a8f723cdf1_recreate_lost_migration.py  bc8fdc8b2c6a_add_to_model_user_filed_confirmed.py
docs/source/: conf.py  index.rst
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/db/: connection.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_repository_unit.py
